compiler/fir/analysis-tests/testData/resolve/expresssions/invoke/implicitTypeOrder.kt

class A {
    fun bar() = <!OPERATOR_MODIFIER_REQUIRED!>foo<!>() // should resolve to invoke

    fun invoke() = this
}

fun create() = A()

konst foo = create()
